--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
     <style>
       .background-element {
         /* Set the background image URL */
-        background-image: url("/img/p22.jpg");
+        background-image: url("img/p22.jpg");
 
         /* Set background properties (optional) */
         background-repeat: no-repeat;
@@ -106,10 +106,7 @@
                 endeavors, witness the evolution of my skills and creativity.
               </p>
               <div class="position-absolute top-100 start-50 translate-end">
-                <img
-                  src="/img/meteor.png"
-                  style="width: 300px; height: 300px"
-                />
+                <img src="img/meteor.png" style="width: 300px; height: 300px" />
               </div>
             </div>
             <div class="d-sm-flex flex-sm-column flex-md-row gap-2">
