--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <style>
       .background-element {
         /* Set the background image URL */
-        background-image: url("/img/p22.jpg");
+        background-image: url("img/p22.jpg");
 
         /* Set background properties (optional) */
         background-repeat: no-repeat;
@@ -118,7 +118,7 @@
               </button>
             </div>
             <div class="d-none d-sm-none d-md-block">
-              <img src="/img/moon.png" class="img-fluid" alt="" srcset="" />
+              <img src="img/moon.png" class="img-fluid" alt="" srcset="" />
             </div>
           </div>
         </div>
