--- a/profile.html
+++ b/profile.html
@@ -25,7 +25,7 @@
     <style>
       .background-element {
   /* Set the background image URL */
-  background-image: url("/img/p22.jpg");
+  background-image: url("img/p22.jpg");
 
   /* Set background properties (optional) */
   background-repeat: no-repeat;
@@ -98,7 +98,7 @@
         >
           <div class="d-flex align-items-center mt-3" >
             <img
-              src="/img/sun.png"
+              src="img/sun.png"
               style="width: 300px; height: 300px;"
               type="button"
               data-bs-toggle="collapse"
