--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
     <style>
       .background-element {
         /* Set the background image URL */
-        background-image: url("/img/p22.jpg");
+        background-image: url("img/p22.jpg");
 
         /* Set background properties (optional) */
         background-repeat: no-repeat;
