--- a/news.html
+++ b/news.html
@@ -25,7 +25,7 @@
     <style>
       .background-element {
         /* Set the background image URL */
-        background-image: url("/img/p22.jpg");
+        background-image: url("img/p22.jpg");
 
         /* Set background properties (optional) */
         background-repeat: no-repeat;
@@ -117,7 +117,7 @@
             </div>
             <div>
               <img
-                src="/img/ircet2023.png"
+                src="img/ircet2023.png"
                 style="width: 300px; height: 400px"
                 alt=""
                 srcset=""
